[tool.poetry]
name = "probabilistic-programming-and-bayesian-methods-for-hackers"
version = "0.1.0"
description = ""
authors = ["Alessio  <alessio.caciagli@okra.ai>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
jupyterlab = "^3.3.2"
numpy = ">=1.15.0,<1.22.2"
scipy = ">=1.7.3,<1.8.0"
matplotlib = "^3.5.1"
pymc3 = "^3.11.5"

[tool.poetry.dev-dependencies]
jupyterlab-code-formatter = "^1.4.10"
black = "^22.1.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
